@@ -9,28 +9,22 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
-public class TournamentServiceImpl implements TournamentService {
+public class TournamentServiceImpl extends TournamentService {
 
     private final TournamentRepository tournamentRepository;
     private final TournamentMapper tournamentMapper;
     private final DtoEnricher<TournamentDto> tournamentDtoEnricher;
 
     @Override
-    public List<Tournament> getAll() {
-        return tournamentRepository.findAll();
-    }
-
-    @Override
-    public List<TournamentDto> getAllTournamentDtos() {
-        List<Tournament> tournaments = getAll();
+    public List<TournamentDto> getAll() {
+        List<Tournament> tournaments = tournamentRepository.findAll();
         return tournaments.stream()
                 .map(tournamentMapper::tournamentEntityToDto)
                 .peek(tournamentDtoEnricher::enrich)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
